Eligiblity test successful

--- a/backend/templates/accuracy.html
+++ b/backend/templates/accuracy.html
@@ -64,9 +64,7 @@
 
         <div class="text-center">
             <!-- Button to go back to the skills page -->
-            <a href="/" class="btn btn-info mt-3">Back to Skills</a>
-            <!-- Button to generate MCQs -->
-            <a href="/mcq" class="btn btn-success mt-3">Generate MCQs</a>
+            <a href="/" class="btn btn-info mt-3">Back to Home</a>
         </div>
     </div>
 
