--- a/backend/templates/eligibility.html
+++ b/backend/templates/eligibility.html
@@ -15,7 +15,7 @@
                 <!-- Eligibility Result -->
                 {% if eligible %}
                 <h3 class="text-success">Congratulations! You are eligible for the role based on your technical skills.</h3>
-                <a href="/mcq" class="btn btn-success mt-3">Generate MCQs</a>
+                <a href="/instructions" class="btn btn-success mt-3">Go to Test </a>
                 {% else %}
                 <h3 class="text-danger">We are sorry to inform you that your skill set is not a match for the provided role.</h3>
                 {% endif %}
